# restaurant_table_reservations

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
admin_page/: apps.py  urls.py  views.py
admin_page/management/commands/: createrestuar.py
admin_page/templates/admin_page/: admin_page.html  base.html  employee_delete.html  employee_detail.html  employee_form.html  employee_list.html  restaurant_detail.html  restaurant_form.html
config/: settings.py  urls.py
redis_data/: dump.rdb
reservation/: admin.py  context_processors.py  forms.py  models.py  services.py  tasks.py  urls.py  validator.py  views.py
reservation/migrations/: 0001_initial.py  0002_employee_restaurant_alter_table_photo_table.py  0003_alter_restaurant_logo.py  0004_restaurant_description.py  0005_alter_employee_options.py
reservation/templates/: home.html
reservation/templates/reservation/: admin_page.html  base.html  home.html  reservation_delete.html  reservation_detail.html  reservation_form.html  reservation_list.html  reservation_update.html  restaurant.html  table_confirm_delete.html  table_detail.html  table_form.html  table_list.html
static/css/: styles.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createsu.py
users/migrations/: 0001_initial.py  0002_remove_user_country_remove_user_token_user_tg_name.py  0003_alter_user_phone.py  0004_user_token.py  0005_alter_user_options.py
users/templates/users/: login.html  password_reset.html  password_reset_complete.html  (+7 more)
(+3 files in other folders)
